--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 <!-- templates/home.html -->
-{% load socialaccount %}
-{% providers_media_js %}
+{#{% load socialaccount %}#}
+{#{% providers_media_js %}#}
 <h1>Django Allauth Tutorial</h1>
 {% if user.is_authenticated %}
 <p>Welcome {{ user.username }} !!!</p>
 {% else %}
-<a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>
+{#<a href="{% provider_login_url "facebook" method="js_sdk" %}">Facebook Connect</a>#}
+<a href="">Facebook Connect</a>
+
 {% endif %}
